--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
 
 ---
 
-{% include css/bootstrap.min.css %}
+/*{% include css/bootstrap.min.css %}*/
 {% include css/main.css %}
